manifests/react-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  type: ClusterIP
  selector:
    app: react-app
  ports:
    - name: http
      port: 80
      targetPort: 80
