manifests/react-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app
spec:
  ingressClassName: nginx
  rules:
    - host: react.192.168.64.3.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app
                port:
                  number: 80
